# pyswisseph

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .hgignore  CMakeLists.txt  DOCS_REDESIGN.md  MANIFEST.in  Makefile  README.TXT  README.md  README.rst  README.txt  docutils.cfg  epydoc.cfg  index.txt  pyproject.toml  pyswisseph.c  setup.py
.github/workflows/: build.yml  deploy-docs.yml
cmake/: README.txt  pysweCMakeLists.txt  sweCMakeLists.txt
debian/: changelog  control  copyright  epydoc.cfg  rules
docs/: conf.py  delta_t.rst  geo_topo_helio_bary_and_planetocentric_positions.rst  index.md  index.rst  installation.md  installation.rst  introduction.rst  quickstart.md  requirements.txt
docs/api/: index.md
docs/api/stubs/: modules.rst  setup.rst  swisseph.rst  tests.rst  tests.template.rst  tests.test_swe_azalt_refrac.rst  tests.test_swe_calc.rst  tests.test_swe_calc_pctr.rst  tests.test_swe_calc_ut.rst  tests.test_swe_close.rst  tests.test_swe_cotrans.rst  tests.test_swe_cotrans_sp.rst  tests.test_swe_cs2degstr.rst  tests.test_swe_cs2lonlatstr.rst  tests.test_swe_cs2timestr.rst  tests.test_swe_csnorm.rst  tests.test_swe_csroundsec.rst  tests.test_swe_d2l.rst  tests.test_swe_date_conversion.rst  tests.test_swe_day_of_week.rst  tests.test_swe_deg_midp.rst  tests.test_swe_degnorm.rst  tests.test_swe_deltat.rst  tests.test_swe_deltat_ex.rst  tests.test_swe_difcs2n.rst  tests.test_swe_difcsn.rst  tests.test_swe_difdeg2n.rst  tests.test_swe_difdegn.rst  tests.test_swe_difrad2n.rst  tests.test_swe_fixstar.rst  tests.test_swe_fixstar2.rst  tests.test_swe_fixstar2_mag.rst  tests.test_swe_fixstar2_ut.rst  tests.test_swe_fixstar_mag.rst  tests.test_swe_fixstar_ut.rst  tests.test_swe_gauquelin_sector.rst  tests.test_swe_get_ayanamsa.rst  tests.test_swe_get_ayanamsa_ex.rst  tests.test_swe_get_ayanamsa_name.rst  tests.test_swe_get_current_file_data.rst  (+46 more)
docs/concepts/: bodies.md  house_systems.md  index.md  sidereal_offsets.md  time_and_zones.md
docs/ephemerides/: index.rst  three_ephemerides.rst
docs/ephemerides/asteroids/: asteroid_99942_apophis.rst  asteroid_ephemeris_files.rst  ceres_pallas_juno_vesta.rst  chiron.rst  how_the_asteroids_were_computed.rst  index.rst
docs/ephemerides/hypothetical_bodies/: harrington.rst  index.rst  selena_white_moon.rst  transpluto_isis.rst  uranian_planets.rst
docs/ephemerides/lunar_and_planetary_nodes_and_apsides/: index.rst  interpolated_or_natural_apogee_and_perigee.rst  mean_lunar_node_and_mean_lunar_apogee.rst  osculating_apogee.rst
docs/ephemerides/planetary_and_lunar/: comparisons_with_aa_and_jpl.rst  extension_of_de406_based_ephemerides.rst  index.rst  solar_ephemeris_in_the_remote_past.rst
docs/ephemerides/sidereal/: index.rst  (+8 more)
docs/guides/: angles_and_houses.md  index.md  tutorial.md  zodiacal_position.md
docs/heliacal_events_eclipses_occultations_etc/: eclipses_occultations_risings_settings_etc.rst  index.rst
docs/installation/: index.rst
docs/introduction/: index.rst
docs/programmers_manual/: ephemeris_related_functions.rst  find_crossings_of_planets_over_positions.rst  get_planet_name.rst  house_position_of_a_planet.rst  index.rst  installation.rst  other_functions.rst  placalc_functions.rst  seasnam_sample.txt  steps_to_get_a_planets_position.rst  swemini.py
docs/sidereal_time_ascendant_mc_houses_vertex/: astrological_house_systems.rst  index.rst
docs/tutorials/: angles_and_houses.md  index.md  printing_a_chart.md  zodiacal_position.md
ephe/: README.TXT  md5sum.txt  seas_00.se1  seas_102.se1  seas_108.se1  seas_114.se1  seas_12.se1  seas_120.se1  seas_126.se1  seas_132.se1  seas_138.se1  seas_144.se1  seas_150.se1  seas_156.se1  seas_162.se1  seas_24.se1  seas_30.se1  seas_36.se1  seas_42.se1  seas_48.se1  seas_54.se1  seas_60.se1  seas_66.se1  seas_72.se1  seas_78.se1  seas_84.se1  seas_90.se1  seas_96.se1  seasm06.se1  seasm102.se1  seasm108.se1  seasm114.se1  seasm12.se1  seasm120.se1  seasm126.se1  seasm132.se1  seasm18.se1  seasm24.se1  seasm30.se1  seasm36.se1  (+14 more)
examples/: tutorial.py  tutorial_app.py
legacy-docs/: introduction.rst
legacy-docs/ephemerides/: fixed_stars_and_galactic_center.rst  index.rst  planetary_centers_of_body_and_planetary_moons.rst
legacy-docs/programmers_manual/: crossings_of_planets_over_positions.rst  house_position_of_a_planet.rst  sidereal_time.rst  topocentric_planet_positions.rst
legacy/legacy-docs/: apparent_vs_true_planetary_positions.rst  conf.py
libswe/: CMakeLists.txt  Makefile  fixstars.cat  sedeltat.txt.inactive  sefstars.txt  seleapsec.txt  seorbel.txt  swecl.c  swedate.c  swedll.h  swehel.c  swehouse.c  swejpl.c  sweph.c  sweph.h  swephexp.h  swephlib.c  swephlib.h  swetest.c
misc/: README.txt  pysweCMakeLists.txt  sweCMakeLists.txt
scripts/: aspectarian.py  maxretro.py  minretro.py  today.py
swephelp/: CMakeLists.txt  Makefile  README  README.TXT  swephelp.d  swephelp.h  swhdatetime.c  swhdatetime.h  swhdef.h  swhformat.c  swhformat.h  swhgeo.c  swhgeo.h  swhmisc.c  swhmisc.h  swhraman.c  swhraman.h  swhsearch.c  swhsearch.h  swhutil.c  swhutil.h  swhwin.h
tests/: template.py  test_swe_azalt_refrac.py  test_swe_calc.py  test_swe_calc_pctr.py  test_swe_calc_ut.py  test_swe_close.py  test_swe_cotrans.py  test_swe_cotrans_sp.py  test_swe_cs2degstr.py  test_swe_cs2lonlatstr.py  test_swe_cs2timestr.py  test_swe_csnorm.py  test_swe_csroundsec.py  test_swe_d2l.py  test_swe_date_conversion.py  test_swe_day_of_week.py  test_swe_deg_midp.py  test_swe_degnorm.py  test_swe_deltat.py  test_swe_deltat_ex.py  test_swe_difcs2n.py  test_swe_difcsn.py  test_swe_difdeg2n.py  test_swe_difdegn.py  test_swe_difrad2n.py  test_swe_fixstar.py  test_swe_fixstar2.py  test_swe_fixstar2_mag.py  test_swe_fixstar2_ut.py  test_swe_fixstar_mag.py  test_swe_fixstar_ut.py  test_swe_gauquelin_sector.py  test_swe_get_ayanamsa.py  test_swe_get_ayanamsa_ex.py  test_swe_get_ayanamsa_name.py  test_swe_get_current_file_data.py  test_swe_get_library_path.py  test_swe_get_orbital_elements.py  test_swe_get_planet_name.py  test_swe_get_tid_acc.py  (+42 more)
website/: index.html  index.txt
(+100 files in other folders)
